--- a/_Aziz.css
+++ b/_Aziz.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
      font-size: 42px;
-     text-shadow: 10px;
+     text-shadow: 1px 1px 1px;
      text-transform: capitalize;
 }
 
@@ -21,12 +21,13 @@ h2 {
 h3 {
      font-size: 26px;
      margin-left: 20px;
-     margin-top: 80px;
-     margin-bottom: 0px;
+     margin-bottom: 20px;
 }
 
 h3+p {
+    margin-top: 40px;
      margin-left: 75px;
+     margin-bottom: 60px;
 }
 
 p {
@@ -134,6 +135,12 @@ a.top:hover, a.top:active {
      margin:  auto 250px;
 }
 
+#contenu>p>a>img {
+    border:0;
+    width:88px;
+    height:31px;
+}
+
 #header {
      text-align: center;
      padding: 40px;
@@ -141,8 +148,7 @@ a.top:hover, a.top:active {
 }
 
 #footer {
-	float: 
-     margin-top: 50px;
+     margin-top: 200px;
      color: #fc8de8;
      background-color: #424242;
      text-align: center;
