--- a/_Aziz.css
+++ b/_Aziz.css
@@ -50,6 +50,20 @@ p.copyright {
      width: 50px;
 }
 
+table, td, th {
+    border: 1px solid #ddd;
+    text-align: left;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    padding: 15px;
+}
+
 img {
      float: left;
      width: 200px;
